// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelayGenerateIDFieldTransform matches expected output: abstract-plural.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query CommentQuery {
  node(id: "comment") {
    ... on Comment {
      actors {
        __id: id
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query CommentQuery {
  node(id: "comment") {
    ... on Comment {
      actors {
        __id: id
      }
    }
    __id: id
  }
}

`;

exports[`RelayGenerateIDFieldTransform matches expected output: node-union.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query UnionQuery {
  maybeNode {
    # ... on Node { __id: id } is autogenerated here because Node is a possible
    # type
    ... on NonNode {
      name
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query UnionQuery {
  maybeNode {
    ... on NonNode {
      name
    }
    ... on Node {
      __id: id
    }
    ... on FakeNode {
      __id: id
    }
  }
}

`;

exports[`RelayGenerateIDFieldTransform matches expected output: non-node-union.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query UnionQuery {
  neverNode {
    # ... on Node { __id: id } is not autogenerated here since no concrete type
    # implements Node
    ... on NonNode {
      name
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query UnionQuery {
  neverNode {
    ... on NonNode {
      name
    }
    ... on FakeNode {
      __id: id
    }
  }
}

`;

exports[`RelayGenerateIDFieldTransform matches expected output: query-with-fragment-variables.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query NodeQuery($id: ID!) {
  node(id: $id) {
    ... on FeedUnit {
      actor {
        ...ActorFragment
      }
    }
  }
}

query ViewerQuery {
  viewer {
    actor {
      ...ActorFragment
    }
  }
}

fragment ActorFragment on Actor {
  name
  ... on User {
    birthdate {
      day
      month
    }
  }
  __id: id
}

query AliasedIDQuery {
  viewer {
    actor {
      _id: id
    }
  }
}

query ConditionalIDQuery($cond: Boolean!) {
  viewer {
    actor {
      __id: id @include(if: $cond)
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query NodeQuery(
  $id: ID!
) {
  node(id: $id) {
    ... on FeedUnit {
      actor {
        ...ActorFragment
        __id: id
      }
    }
    __id: id
  }
}

query ViewerQuery {
  viewer {
    actor {
      ...ActorFragment
      __id: id
    }
  }
}

fragment ActorFragment on Actor {
  name
  ... on User {
    birthdate {
      day
      month
    }
  }
  __id: id
}

query AliasedIDQuery {
  viewer {
    actor {
      _id: id
      __id: id
    }
  }
}

query ConditionalIDQuery(
  $cond: Boolean!
) {
  viewer {
    actor {
      __id: id @include(if: $cond)
      __id: id
    }
  }
}

`;

exports[`RelayGenerateIDFieldTransform matches expected output: reuses-existing-selection.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query StoryQuery {
  story {
    lastName
    __id: id
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query StoryQuery {
  story {
    lastName
    __id: id
  }
}

`;
